--- a/app/src/main/res/layout/activity_mi_cuenta.xml
+++ b/app/src/main/res/layout/activity_mi_cuenta.xml
@@ -188,8 +188,8 @@
 
         <ImageView
             android:id="@+id/imageGeneroMiCuenta"
-            android:layout_width="63dp"
-            android:layout_height="60dp"
+            android:layout_width="36dp"
+            android:layout_height="34dp"
             android:layout_marginTop="32dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -237,8 +237,8 @@
 
         <ImageView
             android:id="@+id/imageFechaNacMiCuenta"
-            android:layout_width="63dp"
-            android:layout_height="60dp"
+            android:layout_width="47dp"
+            android:layout_height="38dp"
             android:layout_marginTop="32dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -287,8 +287,8 @@
 
         <ImageView
             android:id="@+id/imageLugarOrigen"
-            android:layout_width="63dp"
-            android:layout_height="60dp"
+            android:layout_width="37dp"
+            android:layout_height="42dp"
             android:layout_marginTop="32dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -355,10 +355,12 @@
             android:layout_height="40dp"
             android:layout_alignParentBottom="true"
             android:layout_marginTop="32dp"
-            app:layout_constraintBottom_toTopOf="@+id/buttonCerrarSesion"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/buttonCerrarSesion"
+            app:layout_constraintTop_toBottomOf="@id/buttonCerrarSesion"
             app:menu="@menu/botton_navigation">
 
 
