--- a/app/src/main/res/layout/activity_mi_cuenta.xml
+++ b/app/src/main/res/layout/activity_mi_cuenta.xml
@@ -52,7 +52,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/nombreClienteMiCuenta" />
+                app:layout_constraintTop_toBottomOf="@+id/NombreNivel" />
 
             <ImageView
                 android:id="@+id/imageView2"
@@ -119,7 +119,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/telefonoMICuenta" />
 
             <TextView
-                android:id="@+id/correoClienteMiCuenta"
+                android:id="@+id/SaldoBioCoins"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:layout_marginTop="8dp"
@@ -143,7 +143,7 @@
                 tools:ignore="VectorDrawableCompat" />
 
             <TextView
-                android:id="@+id/nombreClienteMiCuenta"
+                android:id="@+id/NombreNivel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -178,7 +178,7 @@
                 android:layout_marginEnd="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/correoClienteMiCuenta"
+                app:layout_constraintTop_toBottomOf="@+id/SaldoBioCoins"
                 app:srcCompat="@drawable/ic_telefono" />
 
             <TextView
