--- a/app/src/main/res/layout/niveles_iconos_row.xml
+++ b/app/src/main/res/layout/niveles_iconos_row.xml
@@ -3,7 +3,9 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="1dp">
+    android:layout_margin="1dp"
+
+    >
 
     <android.support.v7.widget.CardView
         android:layout_width="120dp"
@@ -14,18 +16,25 @@
 
 
 
+
         >
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <ImageView
+
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="90dp"
                 android:layout_height="90dp"
                 android:scaleType="centerCrop"
                 android:layout_centerHorizontal="true"
                 android:id="@+id/IconoNivel"
-                android:src="@drawable/ic_bronce_no_seleccionado"/>
+                android:src="@drawable/ic_bronce_no_seleccionado"
+
+
+
+
+                ></de.hdodenhof.circleimageview.CircleImageView>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
@@ -35,6 +44,12 @@
                 android:textColor="#334D6B"
                 android:textStyle="bold"
                 android:layout_marginTop="2dp"
+                android:gravity="center"
+                android:layout_marginBottom="2dp"
+                android:autoSizeMinTextSize="8sp"
+                android:autoSizeTextType="uniform"
+                android:autoSizeMaxTextSize="15sp"
+                android:id="@+id/IconoNombre"
 
                 />
 
