--- a/app/src/main/res/layout/activity_beneficios.xml
+++ b/app/src/main/res/layout/activity_beneficios.xml
@@ -61,6 +61,9 @@
         android:layout_width="0dp"
         android:layout_height="70dp"
         android:background="#ffffff"
+        android:text="Button"
+        android:textAllCaps="false"
+        android:paddingRight="200dp"
 
         app:layout_constraintEnd_toEndOf="@+id/linea13"
         app:layout_constraintHorizontal_bias="0.511"
@@ -74,17 +77,20 @@
 
         />
 
-    <TextView
-        android:id="@+id/textView18"
+    <Button
+        android:id="@+id/descuento2"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/linea16"
-        app:layout_constraintEnd_toEndOf="@+id/Descuento1"
-        app:layout_constraintStart_toStartOf="@+id/Descuento1"
-        app:layout_constraintTop_toTopOf="@+id/Descuento1" />
+        android:layout_height="70dp"
+
+
+        android:background="#ffffff"
+        android:paddingRight="200dp"
+        android:text="Button"
+        android:textAllCaps="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Informacion" />
 
     <TextView
         android:id="@+id/Informacion"
@@ -98,7 +104,34 @@
         android:paddingTop="10dp"
         android:background="#EBF1F5"
         android:textColor="#000000"
-        android:visibility="gone"/>
+        android:visibility="gone"
+
+        />
+
+    <TextView
+        android:id="@+id/Informacion2"
+        android:layout_width="0dp"
+        android:layout_height="100dp"
+        android:background="#EBF1F5"
+        android:paddingLeft="30dp"
+        android:paddingTop="10dp"
+        android:text="TextView"
+        android:textColor="#000000"
+        app:layout_constraintEnd_toEndOf="@+id/descuento2"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/descuento2"
+        app:layout_constraintTop_toBottomOf="@+id/descuento2"
+        android:visibility="gone"
+
+
+        />
+
+
+
+
+
+
+
 
 
 </android.support.constraint.ConstraintLayout>
